--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,57 @@
+.root {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  gap: 1em;
+}
+
+
 .flex {
     display: flex;
     align-items: center;
     justify-content: space-around;
-  }
+}
+
+header {
+  grid-column: 1/-1;
+}
+
+main {
+  grid-column: 1/3;
+  padding-left: 1em;
+}
+
   
-  header .flex {
+header .flex {
     gap: .75em;
-  }
+}
   
-  span {
+span {
     color:blue
-  }
+}
+
+.card-wraper {
+  display: flex;
+  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
+  margin-bottom: 2.25em;
+  border-radius: 4px;
+  padding: 1.5em;;
+  color: #717171;
+}
+
+.post-details {
+  display:flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+aside {
+  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);;
+  margin-bottom: 2.25em;
+  border-radius: 4px;
+  padding: 1.5em;
+}
   
+ul {
+  list-style-type: none;
+  padding: 0;
+}
