--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,13 @@ main {
   padding-left: 1em;
 }
 
-  
+.votes {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 1.5em;
+}
+
 header .flex {
     gap: .75em;
 }
@@ -31,6 +37,7 @@ span {
 
 .card-wraper {
   display: flex;
+  align-items: center;
   box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
   margin-bottom: 2.25em;
   border-radius: 4px;
