--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,20 @@
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
   gap: 1em;
+
+  max-width: 80%;
+  margin: 0 auto;
 }
 
-
 .flex {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
 header {
   grid-column: 1/-1;
+  font-size: 2rem;
 }
 
 main {
@@ -30,35 +33,31 @@ main {
 header .flex {
     gap: .75em;
 }
-  
+
+
 span {
     color:blue
 }
 
-.card-wraper {
-  display: flex;
-  align-items: center;
-  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
-  margin-bottom: 2.25em;
-  border-radius: 4px;
-  padding: 1.5em;;
-  color: #717171;
-}
-
-.post-details {
-  display:flex;
-  align-items: center;
-  justify-content: space-between;
-}
 
 aside {
   box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);;
-  margin-bottom: 2.25em;
   border-radius: 4px;
   padding: 1.5em;
+  height: fit-content;
 }
   
 ul {
   list-style-type: none;
   padding: 0;
+}
+
+@media (max-width:800px) {
+  aside {
+      display: none;
+  }
+
+  main {
+    grid-column: 1/4;
+  }
 }
