--- a/src/components/Posts.css
+++ b/src/components/Posts.css
@@ -18,3 +18,27 @@
     align-items: center;
     background: #fcfcfc;
 }
+
+.card-wraper {
+    display: flex;
+    align-items: flex-start;
+    box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
+    margin-bottom: 2.25em;
+    border-radius: 4px;
+    padding: 1.5em;;
+    color: #717171;
+}
+
+h3 {
+    margin-top: 0;
+}
+
+.card-wraper:hover {
+    box-shadow: 0 20px 25px -5px rgba(0,0,0,0.1),0 10px 10px -5px rgba(0,0,0,0.04);
+}
+  
+.post-details {
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+}
