--- a/src/App.css
+++ b/src/App.css
@@ -53,11 +53,28 @@ ul {
 }
 
 @media (max-width:800px) {
-  aside {
-      display: none;
+  .root {
+    margin-top: 2rem;
   }
+
+  /* aside {
+      display: none;
+  } */
 
   main {
     grid-column: 1/4;
+  }
+
+  .flex {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .logo_name {
+    flex-direction: row;
+  }
+
+  p {
+    margin: 0;
   }
 }
